test/expected/using_rgi.out
using SI = register int
                    ^
21: error: "typedef register int" is illegal for built-in type since C++17
